name:                hasknag
version:             1.0.0
synopsis:            Haskell nagios IRC announce bot
homepage:            https://github.com/haskell-infra/hasknag
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable hasknag
  main-is:             hasknag.hs
  build-depends:       base >=4.6 && <4.7, network >=2.4 && <2.5, irc ==0.5.*
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -O2
